@@ -93,7 +93,7 @@ GUILE_LDFLAGS = @GUILE_LDFLAGS@
 INIMETAFONT = @INIMETAFONT@
 LN = @LN@
 LN_S = @LN_S@
-METAFONT = @METAFONT@
+METAFONT = @METAFONT@ -progname=mf
 MFMODE = @MFMODE@
 MSGFMT = @MSGFMT@
 ROOTSEP = @ROOTSEP@
